--- a/src/ui/MainWindow.qrc
+++ b/src/ui/MainWindow.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="smileManager" >
+    <file>images/folder32.png</file>
+    <file>images/accept32.png</file>
     <file>images/down32.png</file>
     <file>images/delete32.png</file>
     <file>images/up32.png</file>
