--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -32,9 +32,9 @@
      <property name="geometry" >
       <rect>
        <x>10</x>
-       <y>90</y>
+       <y>120</y>
        <width>94</width>
-       <height>151</height>
+       <height>161</height>
       </rect>
      </property>
     </widget>
@@ -42,7 +42,7 @@
      <property name="geometry" >
       <rect>
        <x>10</x>
-       <y>250</y>
+       <y>290</y>
        <width>91</width>
        <height>22</height>
       </rect>
@@ -52,7 +52,7 @@
      <property name="geometry" >
       <rect>
        <x>50</x>
-       <y>330</y>
+       <y>360</y>
        <width>75</width>
        <height>26</height>
       </rect>
@@ -64,53 +64,14 @@
     <widget class="QPushButton" name="cancelButton" >
      <property name="geometry" >
       <rect>
-       <x>160</x>
-       <y>330</y>
+       <x>200</x>
+       <y>360</y>
        <width>75</width>
        <height>26</height>
       </rect>
      </property>
      <property name="text" >
       <string>Cancel</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="changeImageButton" >
-     <property name="geometry" >
-      <rect>
-       <x>100</x>
-       <y>40</y>
-       <width>75</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Change</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="addTextButton" >
-     <property name="geometry" >
-      <rect>
-       <x>110</x>
-       <y>120</y>
-       <width>75</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Add</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="removeTextButton" >
-     <property name="geometry" >
-      <rect>
-       <x>110</x>
-       <y>160</y>
-       <width>75</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Remove</string>
      </property>
     </widget>
     <widget class="QLabel" name="movieLabel" >
@@ -153,17 +114,96 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QPushButton" name="saveTextButton" >
+    <widget class="QToolButton" name="saveTextButton" >
      <property name="geometry" >
       <rect>
        <x>110</x>
-       <y>250</y>
-       <width>75</width>
-       <height>26</height>
+       <y>290</y>
+       <width>27</width>
+       <height>25</height>
       </rect>
      </property>
      <property name="text" >
-      <string>Save</string>
+      <string/>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/accept32.png</normaloff>:/smileManager/images/accept32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="addTextButton" >
+     <property name="geometry" >
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>27</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/add32.png</normaloff>:/smileManager/images/add32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="removeTextButton" >
+     <property name="geometry" >
+      <rect>
+       <x>40</x>
+       <y>90</y>
+       <width>27</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/delete32.png</normaloff>:/smileManager/images/delete32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="changeImageButton" >
+     <property name="geometry" >
+      <rect>
+       <x>80</x>
+       <y>40</y>
+       <width>27</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/folder32.png</normaloff>:/smileManager/images/folder32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
      </property>
     </widget>
    </widget>
