--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -383,7 +383,7 @@
     <widget class="QToolButton" name="downSmileButton" >
      <property name="geometry" >
       <rect>
-       <x>100</x>
+       <x>130</x>
        <y>20</y>
        <width>27</width>
        <height>25</height>
@@ -403,7 +403,7 @@
     <widget class="QToolButton" name="removeSmileButton" >
      <property name="geometry" >
       <rect>
-       <x>40</x>
+       <x>70</x>
        <y>20</y>
        <width>27</width>
        <height>25</height>
@@ -423,7 +423,7 @@
     <widget class="QToolButton" name="upSmileButton" >
      <property name="geometry" >
       <rect>
-       <x>70</x>
+       <x>100</x>
        <y>20</y>
        <width>27</width>
        <height>25</height>
@@ -452,6 +452,26 @@
      <property name="icon" >
       <iconset resource="MainWindow.qrc" >
        <normaloff>:/smileManager/images/add32.png</normaloff>:/smileManager/images/add32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="editSmileButton" >
+     <property name="geometry" >
+      <rect>
+       <x>40</x>
+       <y>20</y>
+       <width>27</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/edit32.png</normaloff>:/smileManager/images/edit32.png</iconset>
      </property>
      <property name="iconSize" >
       <size>
