--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -5,12 +5,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>663</width>
+    <height>601</height>
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>MainWindow</string>
+   <string>qsmile</string>
   </property>
   <widget class="QWidget" name="centralwidget" >
    <widget class="QGroupBox" name="smileDetailBox" >
@@ -19,9 +19,9 @@
     </property>
     <property name="geometry" >
      <rect>
-      <x>460</x>
+      <x>470</x>
       <y>130</y>
-      <width>321</width>
+      <width>171</width>
       <height>411</height>
      </rect>
     </property>
@@ -31,55 +31,32 @@
     <widget class="QListWidget" name="textList" >
      <property name="geometry" >
       <rect>
-       <x>10</x>
+       <x>30</x>
        <y>120</y>
-       <width>94</width>
+       <width>111</width>
        <height>161</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="textEdit" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
      <property name="geometry" >
       <rect>
-       <x>10</x>
+       <x>30</x>
        <y>290</y>
-       <width>91</width>
+       <width>111</width>
        <height>22</height>
       </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="saveButton" >
-     <property name="geometry" >
-      <rect>
-       <x>50</x>
-       <y>360</y>
-       <width>75</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Save</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="cancelButton" >
-     <property name="geometry" >
-      <rect>
-       <x>200</x>
-       <y>360</y>
-       <width>75</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Cancel</string>
      </property>
     </widget>
     <widget class="QLabel" name="movieLabel" >
      <property name="geometry" >
       <rect>
-       <x>30</x>
+       <x>29</x>
        <y>30</y>
-       <width>40</width>
+       <width>61</width>
        <height>40</height>
       </rect>
      </property>
@@ -114,13 +91,13 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QToolButton" name="saveTextButton" >
+    <widget class="QToolButton" name="saveButton" >
      <property name="geometry" >
       <rect>
-       <x>110</x>
-       <y>290</y>
-       <width>27</width>
-       <height>25</height>
+       <x>30</x>
+       <y>350</y>
+       <width>32</width>
+       <height>32</height>
       </rect>
      </property>
      <property name="text" >
@@ -140,7 +117,7 @@
     <widget class="QToolButton" name="addTextButton" >
      <property name="geometry" >
       <rect>
-       <x>10</x>
+       <x>30</x>
        <y>90</y>
        <width>27</width>
        <height>25</height>
@@ -161,9 +138,12 @@
      </property>
     </widget>
     <widget class="QToolButton" name="removeTextButton" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
      <property name="geometry" >
       <rect>
-       <x>40</x>
+       <x>60</x>
        <y>90</y>
        <width>27</width>
        <height>25</height>
@@ -186,7 +166,7 @@
     <widget class="QToolButton" name="changeImageButton" >
      <property name="geometry" >
       <rect>
-       <x>80</x>
+       <x>110</x>
        <y>40</y>
        <width>27</width>
        <height>25</height>
@@ -206,6 +186,29 @@
       </size>
      </property>
     </widget>
+    <widget class="QToolButton" name="cancelButton" >
+     <property name="geometry" >
+      <rect>
+       <x>110</x>
+       <y>350</y>
+       <width>32</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="icon" >
+      <iconset resource="MainWindow.qrc" >
+       <normaloff>:/smileManager/images/close32.png</normaloff>:/smileManager/images/close32.png</iconset>
+     </property>
+     <property name="iconSize" >
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="packBox" >
     <property name="enabled" >
@@ -215,7 +218,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>771</width>
+      <width>631</width>
       <height>111</height>
      </rect>
     </property>
@@ -336,7 +339,7 @@
      <rect>
       <x>10</x>
       <y>130</y>
-      <width>401</width>
+      <width>431</width>
       <height>411</height>
      </rect>
     </property>
@@ -348,7 +351,7 @@
       <rect>
        <x>10</x>
        <y>50</y>
-       <width>381</width>
+       <width>411</width>
        <height>351</height>
       </rect>
      </property>
@@ -487,7 +490,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>663</width>
      <height>28</height>
     </rect>
    </property>
