--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -494,7 +494,7 @@
      <height>28</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile" >
+   <widget class="QMenu" name="menuImport" >
     <property name="title" >
      <string>Import</string>
     </property>
@@ -516,7 +516,15 @@
     <addaction name="actionExport_To_Qip" />
     <addaction name="actionExport_To_All" />
    </widget>
+   <widget class="QMenu" name="menuFile" >
+    <property name="title" >
+     <string>File</string>
+    </property>
+    <addaction name="actionNew_pack" />
+    <addaction name="actionClose_pack" />
+   </widget>
    <addaction name="menuFile" />
+   <addaction name="menuImport" />
    <addaction name="menuExport" />
   </widget>
   <widget class="QStatusBar" name="statusbar" />
@@ -563,6 +571,19 @@
   <action name="actionExport_To_All" >
    <property name="text" >
     <string>Export To All</string>
+   </property>
+  </action>
+  <action name="actionNew_pack" >
+   <property name="text" >
+    <string>New pack</string>
+   </property>
+  </action>
+  <action name="actionClose_pack" >
+   <property name="enabled" >
+    <bool>false</bool>
+   </property>
+   <property name="text" >
+    <string>Close pack</string>
    </property>
   </action>
  </widget>
